@@ -15839,3 +15839,6 @@ qc pass: p4lang: bier core over vlan backplane
 ---------------------------------- 2024-07-15 13:32:07 24.7.15
 no qc pass: dhcp with excluded address
 failed: dhcp with excluded address
+---------------------------------- 2024-07-15 14:02:32 24.7.15
+no failed: dhcp with excluded address
+qc pass: dhcp with excluded address
